# Spout2

./: .gitignore  CMakeLists.txt
SPOUTSDK/SpoutDirectX/SpoutDX/: CMakeLists.txt
SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX12/: CMakeLists.txt  SpoutDX12.cpp
SPOUTSDK/SpoutGL/: CMakeLists.txt
SPOUTSDK/SpoutLibrary/: CMakeLists.txt
SPOUTSDK/SpoutLibrary/Binaries/Win32/: SpoutLibrary.lib
